syntax = "proto3";
package anti_corruption;

import "google/protobuf/empty.proto";
// ref: https://json-to-proto.github.io/

service MetadataService {
  rpc GetMetadata(google.protobuf.Empty) returns (Metadata) {}
}
message Metadata {
  string appEnv = 1;
  repeated string supportedTimezones = 2;
  repeated Locale supportedLocales = 3;
}

message Timezones {
  repeated string id = 1;
}

message Locale {
  string tag = 1;
  string language = 2;
  string describe = 3;
}
